# advent_of_code

./: .gitignore
2022/day-01/: Cargo.toml
2022/day-01/src/: part1.rs  part2.rs
2022/day-02/src/: part1.rs  part2.rs
2022/day-03/src/: part1.rs  part2.rs
2022/day-04/src/: part1.rs  part2.rs
2022/day-05/: Cargo.toml
2022/day-05/src/: part1.rs  part2.rs  part2_yt.rs
2022/day-06/: Cargo.toml
2022/day-06/src/: part1.rs  part2.rs
2022/day-07/src/: part1.rs
2023/day-01/: Cargo.toml
2023/day-02/: Cargo.toml  input1.txt
2023/day-04/src/: part2.rs
2023/day-05/src/: part1.rs
2023/day-06/: Cargo.toml
2023/day-06/src/: part2.rs
2023/day-07/src/: part1_test.rs  part2.rs
2023/day-08/src/: part1.rs
2023/day-09/: Cargo.toml
2023/day-09/src/: part1.rs  part2.rs
2023/day-10/: Cargo.toml
2023/day-10/src/: part1.rs  part2.rs
2023/day-11/: Cargo.toml
2023/day-11/src/: part1.rs  part2.rs  part2_yt.rs
2023/day-12/: Cargo.toml
2023/day-12/src/: part1.rs  part2.rs
2023/day-13/: Cargo.toml  part1_yt.py
2023/day-13/src/: part1.rs  part2.rs
2023/day-14/: Cargo.toml  part2_yt.py
2023/day-14/src/: part1.rs  part2.rs
2023/day-15/src/: part1.rs  part2.rs
2023/day-16/src/: part1.rs  part2.rs
2024/day-03/src/: part1.rs  part1_yt.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/src/: part1.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: part2.rs  part2_test.rs
2024/day-06/src/: part1.rs
2024/day-07/: Cargo.toml  part1.py
2024/day-07/src/: part1.rs
2024/day-08/: Cargo.toml
2024/day-08/src/: part2.rs
2024/template/src/: part1.rs
