[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[[bin]]
name = "part2_yt"
path = "src/part2_yt.rs"

[dependencies]
glam = "0.24.2"
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
rstest = "0.18.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
transpose = "0.2.2"
