[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[[bin]]
name = "part2_test"
path = "src/part2_test.rs"

[dependencies]
env_logger = "0.10.1"
nom = "7.1.3"
nom-supreme = "0.8.0"
test-log = "0.2.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indicatif = {version = "0.17.7", features = ["rayon"]}
rayon = "1.8.0"
